crates/gateway/src/dialect/snapshots/gateway__dialect__request__tests__openai_request_wire_is_pinned.snap
---
source: crates/gateway/src/dialect/request.rs
assertion_line: 125
expression: "serde_json::to_string_pretty(&wire).unwrap()"
---
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "city\n\nbuilding",
      "role": "system"
    },
    {
      "content": "Task: probe",
      "role": "user"
    },
    {
      "content": "reading",
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{\"path\":\"notes.md\"}",
            "name": "exec"
          },
          "id": "tu_1",
          "type": "function"
        }
      ]
    },
    {
      "content": "ok",
      "role": "tool",
      "tool_call_id": "tu_1"
    }
  ],
  "model": "sonnet",
  "tools": [
    {
      "function": {
        "description": "run things",
        "name": "exec",
        "parameters": {
          "type": "object"
        }
      },
      "type": "function"
    }
  ]
}
